bandaid fixes for mobile

--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
     </head>
     <body>
         <h1>Triangle Solver</h1>
-
+        <hr>
+        <h3>current mode: SSS</h3>
+        <hr>
         <div class="SolveMethod" id="ContainerSSS">
             <form id="FormSSS">
-                <div class="col-1">Side a:</div><input type="text" id="inSideA"><br>
-                <div class="col-1">Side b:</div><input type="text" id="inSideB"><br>
-                <div class="col-1">Side c:</div><input type="text" id="inSideC"><br>
+                <div class="col-2">Side a:</div><input type="text" id="inSideA"><br>
+                <div class="col-2">Side b:</div><input type="text" id="inSideB"><br>
+                <div class="col-2">Side c:</div><input type="text" id="inSideC"><br>
                 <input type="submit" value="Calculate">
             </form>
 
         </div>
-
+        <hr>
         <div class="Results">
-            <h3>results</h3>
+            <h3>Results</h3>
             <ul class="Sides">
                 <li>a = <span id="outSideA"></span></li>
                 <li>b = <span id="outSideB"></span></li>
