--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <title>Triangle Solver</title>
     </head>
     <body>
         <h1>Triangle Solver</h1>
