--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         
         <!-- Custom Styling -->
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="icon.png">
     </head>
     <body>
         <div class="Header" align = "center">
