--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
 
         <hr>
 
-<!--
-        <ul>
-            <li>
-                <a href="#tab-SSS">SSS</a>
-            </li>
-            <li>
-                <a href="#tab-SAS">SAS</a>
-            </li>
-            <li>
-                <a href="#tab-SSA">SSA</a>
-            </li>
-            <li>
-                <a href="#tab-rank">Rank</a>
-            </li>
-        </ul>
+        <!--
+<ul>
+<li>
+<a href="#tab-SSS">SSS</a>
+</li>
+<li>
+<a href="#tab-SAS">SAS</a>
+</li>
+<li>
+<a href="#tab-SSA">SSA</a>
+</li>
+<li>
+<a href="#tab-rank">Rank</a>
+</li>
+</ul>
 -->
 
         <div class="row">
@@ -92,7 +92,7 @@
             </div>
             <div class = "col-sm-12 col-lg-6">
                 <div class = "container">
-                    <div class="Results">
+                    <div class="Results" id="Results">
                         <div class = "row">
                             <div class = "container">
                                 <h3>Results</h3>
